first three completed

--- a/src/Math-to-Code.ipynb
+++ b/src/Math-to-Code.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "5cb4fa5e",
    "metadata": {},
    "outputs": [],
@@ -44,8 +44,11 @@
     "    \n",
     "    # calculate this value\n",
     "    ans = None\n",
-    "    \n",
     "    # YOUR CODE HERE\n",
+    "    sum = 0\n",
+    "    for i in x_vec:\n",
+    "        sum = sum + i\n",
+    "    ans = sum\n",
     "    return ans"
    ]
   },
@@ -80,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "1c11fe0c",
    "metadata": {},
    "outputs": [],
@@ -98,7 +101,10 @@
     "    ans = None\n",
     "    \n",
     "    # YOUR CODE HERE\n",
-    "    \n",
+    "    sum = 0\n",
+    "    for xi, yi in zip(x_vec, y_vec):\n",
+    "        sum = sum + (xi - yi)\n",
+    "    ans = sum\n",
     "    return ans"
    ]
   },
@@ -153,7 +159,9 @@
     "    ans = None\n",
     "    \n",
     "    # YOUR CODE HERE\n",
-    "    \n",
+    "    sum = 0\n",
+    "    for xi, yi in zip(x_vec, y_vec):\n",
+    "        sum = sum + (xi + yi)\n",
     "    return ans"
    ]
   },
@@ -194,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "6158473a",
    "metadata": {},
    "outputs": [],
@@ -1168,7 +1176,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.9"
   }
  },
  "nbformat": 4,
